# ifortex

./: .gitignore  README.md  main.py  pyproject.toml  student_exam_data.csv
.devcontainer/: devcontainer.json
models/: catboost.py  catboost_model.cbm  final_model.py
notebooks/: eda.ipynb  training.ipynb
